# img2laser

./: Cargo.toml  Dioxus.toml  LICENSE  README.md  index.html
assets/: main.css
assets/dioxus/: img2laser.js  name.js
assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
src/: components.rs  lib.rs  main.rs  sinusoid.rs
