[package]
name = "img2laser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.10", features = ["derive"] }
image = "0.24.6"
ndarray = "0.15.6"
nshare = { version = "0.9.0", default-features = false, features = ["image", "ndarray"] }
plotters = "0.3.4"
svg = "0.13.0"
thiserror = "1.0.44"